--- a/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
@@ -40,7 +40,7 @@
                 Responsive = true,
                 Display = true,
                 Title = new OptionsTitle {Display = true, Text = "some text"},
-                Legend = new RadarChartLegend {Position = Position.TOP},
+                Legend = new Legend {Position = LegendPosition.RIGHT.ToString()},
                 Scale = new Scale {Ticks = new Ticks {BeginAtZero = true}}
             },
             Data = new RadarChartData()
@@ -80,10 +80,10 @@
 
     public void UpdateChart()
     {
-        //Add new dataset
+    //Add new dataset
         var rand = new Random();
         var max = radarChartConfig.Data.Datasets.First().Data.Max();
-        //var color = $"#{rand.Next(0x1000000):X6}";
+    //var color = $"#{rand.Next(0x1000000):X6}";
         var color = $"#{rand.Next(16777215):X6}";
         radarChartConfig.Data.Datasets.Add(new RadarChartDataset
         {
