--- a/samples/ChartJs.Blazor.Sample/Shared/Components/DataSetDisplay.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/Components/DataSetDisplay.cshtml
@@ -3,7 +3,7 @@
 <form style="margin-top: 20px">
     <div class="form-row">
         <div class="form-group col-md-6">
-            <label for="textAreaId">Chart Dataset - You can Edit Me</label>
+            <label for="textAreaId" class="align-bottom" >Chart Dataset - You can Edit Me</label>
         </div>
         <div class="form-group col-md-6">
             <button class="btn btn-primary float-right"
