--- a/samples/ChartJs.Blazor.Sample/Pages/Index.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Index.cshtml
@@ -51,14 +51,14 @@
                 {
                     new BarChartDataset
                     {
-                        Label = "# of Votes from blazor",
+                        Label = "1'st dataset",
                         BackgroundColor = ColorUtil.RandomColorString(),
                         BorderColor = ColorUtil.RandomColorString(),
                         Data = new List<dynamic> {19, 12, 5, 3, 3, 2}
                     },
                     new BarChartDataset
                     {
-                        Label = "# of Likes from blazor",
+                        Label = "2'nd dataset",
                         BackgroundColor = ColorUtil.RandomColorString(),
                         BorderColor = ColorUtil.RandomColorString(),
                         Data = new List<dynamic> {30, 10, 15, 13, 13, 12}
