--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart/FillLineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart/FillLineChart.cshtml
@@ -40,7 +40,7 @@
                 Text = "Sample chart from Blazor",
                 Display = true,
                 Responsive = true,
-                Title = new OptionsTitle { Display = true, Text = "Text?" },
+                Title = new OptionsTitle { Display = true, Text = "Fill Line Chart" },
                 Tooltips = new Tooltips
                 {
                     Mode = Mode.nearest,
@@ -88,7 +88,7 @@
                 {
                     BackgroundColor = "#ff6384",
                     BorderColor = "#ff6384",
-                    Label = "# of Votes from blazor",
+                    Label = "1'st dataset",
                     Data = new List<dynamic> {4, 6, 2, 7, 9, 1},
                     Fill = true,
                     BorderWidth = 2,
@@ -99,7 +99,7 @@
                 {
                     BackgroundColor = ColorUtil.ColorString(34, 78, 234, 0.56),
                     BorderColor = ColorUtil.ColorString(34, 78, 234, 0.56),
-                    Label = "# of Votes from blazor",
+                    Label = "2'nd dataset",
                     Data = new List<dynamic> {14, 16, 12, 17, 19, 11},
                     Fill = true,
                     BorderWidth = 2,
