--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart/LineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart/LineChart.cshtml
@@ -39,11 +39,11 @@
                 Text = "Sample chart from Blazor",
                 Display = true,
                 Responsive = true,
-                Title = new OptionsTitle {Display = true, Text = "Text?"},
-                Legend = new Legend()
+                Title = new OptionsTitle {Display = true, Text = "Line Chart"},
+                Legend = new Legend
                 {
                     Position = LegendPosition.BOTTOM.ToString(),
-                    Labels = new Labels()
+                    Labels = new Labels
                     {
                         UsePointStyle = true
                     }
