--- a/samples/ChartJs.Blazor.Sample/Pages/PolarAreaChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/PolarAreaChart.cshtml
@@ -43,7 +43,7 @@
                 Title = new OptionsTitle {Display = true, Text = "I R TITLE"},
                 Animation = new DoughnutAnimation {AnimateScale = true, AnimateRotate = true},
                 Scale = new PolarAreaScale {Ticks = new Ticks {BeginAtZero = true}},
-                Legend = new Legend() {Position = LegendPosition.TOP.ToString()}
+                Legend = new Legend {Position = LegendPosition.TOP.ToString()}
             },
             Data = new PolarAreaData
             {
