Added a new sample: custom on click handler for Legend Item

--- a/samples/ChartJs.Blazor.Sample/Pages/DoughnutChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/DoughnutChart.cshtml
@@ -45,7 +45,7 @@
                 },
                 Display = true,
                 Responsive = true,
-                Legend = new Legend {Position = LegendPosition.RIGHT.ToString()}
+                Legend = new ChartJS.Common.Legend {Position = LegendPosition.RIGHT.ToString()}
             },
             Data = new DoughnutData
             {
