--- a/samples/ChartJs.Blazor.Sample/Pages/MixedChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/MixedChart.cshtml
@@ -41,7 +41,7 @@
                 Text = "Sample chart from Blazor",
                 Display = true,
                 Responsive = true,
-                Legend = new Legend
+                Legend = new ChartJS.Common.Legend
                 {
                     Position = LegendPosition.LEFT.ToString(),
                     Reverse = true,
