--- a/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/RadarChart.cshtml
@@ -41,7 +41,7 @@
                 Responsive = true,
                 Display = true,
                 Title = new OptionsTitle {Display = true, Text = "Radar Chart"},
-                Legend = new Legend
+                Legend = new ChartJS.Common.Legend
                 {
                     Position = LegendPosition.RIGHT.ToString(),
                     Labels = new Labels()
