--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -53,6 +53,19 @@
             </ul>
 
         </li>
+        
+        <li class="nav-item px-3">
+            <div class="px-4" style="color: azure; margin-top: 20px">Legend</div>
+            <ul class="nav flex-column">
+
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/Legend/CustomOnClick">
+                        <span class="oi oi-bar-chart" aria-hidden="true"></span> Custom OnClick
+                    </NavLink>
+                </li>
+
+            </ul>
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/bubblechart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Bubble Chart
