Implemented a more extensible version of handling OnClick events on Legend items. Currently you can specify a JS function or a static .Net method to handle the event

--- a/samples/ChartJs.Blazor.Sample/_ViewImports.cshtml
+++ b/samples/ChartJs.Blazor.Sample/_ViewImports.cshtml
@@ -10,3 +10,4 @@
 @using ChartJs.Blazor.Sample
 @using ChartJs.Blazor.Sample.Shared
 @addTagHelper *,ChartJs.Blazor
+@addTagHelper *, Sotsera.Blazor.Toaster
