--- a/samples/ChartJs.Blazor.Sample/Pages/Legend/Js-OnClick.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Legend/Js-OnClick.cshtml
@@ -1,10 +1,10 @@
-﻿@page "/Legend/CustomOnClick"
+﻿@page "/Legend/JsOnClick"
 @using ChartJs.Blazor.ChartJS.BarChart.Dataset
 @using ChartJs.Blazor.ChartJS.Common
+@using ChartJs.Blazor.ChartJS.Common.Legends
 @using ChartJs.Blazor.Util.Color
 @using ChartJs.Blazor.Sample.Shared.Components
 @using Newtonsoft.Json
-
 
 <h2>Simple Bar Chart</h2>
 <div class="row">
@@ -45,9 +45,9 @@
                 Text = "Sample chart from Blazor",
                 Display = true,
                 Responsive = true,
-                Legend = new Legend()
+                Legend = new Legend
                 {
-                    OnClick = "SampleFunctions.HideOtherDatasetsFunc"
+                    OnClick = new JsClickHandler("SampleFunctions.HideOtherDatasetsFunc") // Add the full name of your JS function here. Keep in mind that the function needs to take a sender and event args
                 }
             },
             Data = new BarChartData
