--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -53,14 +53,19 @@
             </ul>
 
         </li>
-        
+
         <li class="nav-item px-3">
             <div class="px-4" style="color: azure; margin-top: 20px">Legend</div>
             <ul class="nav flex-column">
 
                 <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="/Legend/CustomOnClick">
-                        <span class="oi oi-bar-chart" aria-hidden="true"></span> Custom OnClick
+                    <NavLink class="nav-link" href="/Legend/JsOnClick">
+                        <span class="oi oi-bar-chart" aria-hidden="true"></span> JS OnClick
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/Legend/DotNetStaticOnClick">
+                        <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Static OnClick
                     </NavLink>
                 </li>
 
@@ -91,7 +96,7 @@
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Doughnut Chart
             </NavLink>
         </li>
-        
+
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/scatterchart">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Scatter Chart
