--- a/samples/ChartJs.Blazor.Sample/App.cshtml
+++ b/samples/ChartJs.Blazor.Sample/App.cshtml
@@ -3,3 +3,4 @@
     into Program.cs, and it won't be necessary to specify AppAssembly.
 -->
 <Router AppAssembly=typeof(Program).Assembly />
+<toastContainer />
