--- a/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Shared/NavMenu.cshtml
@@ -67,6 +67,10 @@
                     <NavLink class="nav-link" href="/Legend/DotNetStaticOnClick">
                         <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Static OnClick
                     </NavLink>
+                </li>                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/Legend/DotNetInstanceOnClick">
+                        <span class="oi oi-bar-chart" aria-hidden="true"></span> .Net Instance OnClick
+                    </NavLink>
                 </li>
 
             </ul>
