Added support for handling mouse-over events, for legend items, via instance and static .Net handlers

--- a/samples/ChartJs.Blazor.Sample/Pages/BarCharts/HorizontalBarChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/BarCharts/HorizontalBarChart.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/HorizontalBarChart"
 @using ChartJs.Blazor.ChartJS.BarChart.Dataset
 @using ChartJs.Blazor.ChartJS.Common
+@using ChartJs.Blazor.ChartJS.Common.Legends
 @using ChartJs.Blazor.Util.Color
 @using ChartJs.Blazor.Sample.Shared.Components
 @using Newtonsoft.Json
