--- a/samples/ChartJs.Blazor.Sample/Pages/Legend/Js-OnClick.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Legend/Js-OnClick.cshtml
@@ -2,6 +2,7 @@
 @using ChartJs.Blazor.ChartJS.BarChart.Dataset
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.Common.Legends
+@using ChartJs.Blazor.ChartJS.Common.Legends.OnClickHandler
 @using ChartJs.Blazor.Util.Color
 @using ChartJs.Blazor.Sample.Shared.Components
 @using Newtonsoft.Json
